# CapstoneBasic

./: .env  Makefile  README.md  customusers_fixture.json  db.sqlite3  docker-compose.yml  docker-compose_old.yml  manage.py  pyproject.toml
config/: __init__.py  celery.py  is_docker_container.py  settings.py  urls.py
custom_user_app/: admin.py  apps.py  urls.py  views.py
custom_user_app/forms/: CustomAuthenticationForm.py  CustomUserCreationForm.py  __init__.py
custom_user_app/migrations/: 0001_initial.py
custom_user_app/models/: CustomUser.py  __init__.py
custom_user_app/templates/custom_user_app/: base.html  login.html  logout.html  register.html
docker-build/app/: Dockerfile_old  entrypoint.sh
fixtures/: marketplace_fixture.json
web_scraping/: admin.py  apps.py  ozon_parser.py  ozon_parser4.py  tasks.py  test_chromedriver.py  urls.py  wildberries_parser.py
web_scraping/management/commands/: run_wb_scraper.py  run_wb_scraper1.py
web_scraping/migrations/: 0001_initial.py
web_scraping/models/: __init__.py  basemodel.py  marketplace.py  product.py  saerchers_product.py  searchers.py
web_scraping/parcers/: __init__.py  ozon_parser.py  ozon_parser1.py  ozon_parser4.py  ozon_parser_old.py  ozon_parser_old1.py  parser_base.py  test_chromedriver.py  wb_parser.py  wildberries_parser.py  wildberries_parser_old1.py
web_scraping/services/: ozon_service.py  wildberries_service.py
web_scraping/views/: __init__.py  about.py  get_progress.py  index.py  query_list.py  query_progress.py  query_result.py  search_results.py
(+7 files in other folders)
