[project]
name = "capstonebasic"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "django-extensions>=4.1",
    "gunicorn>=25.3.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "selenium>=4.41.0",
    "seleniumbase>=4.47.8",
    "uv>=0.11.3",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "ipython>=9.12.0",
]

[tool.black]
line-length = 79
